added daily chart

--- a/weatherapp/package.json
+++ b/weatherapp/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "moment": "^2.24.0",
+    "moment-round": "^1.0.1",
     "moment-timezone": "^0.5.28",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
