Languages: added initial language support, not fully translated

--- a/weatherapp/package.json
+++ b/weatherapp/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
+    "i18next": "^19.4.5",
     "moment": "^2.24.0",
     "moment-round": "^1.0.1",
     "moment-timezone": "^0.5.28",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.5.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
